This commit was manufactured by cvs2git to create tag 'Release-3-5pre040207'.
Sprout from master 2004-02-07 19:12:44 UTC D. A. <d.a@example.com> 'Remove more proofgeneral.org mail aliases'
Cherrypick from master 2004-02-07 20:06:16 UTC D. A. <d.a@example.com> 'Remove development distribution.':
    ChangeLog
    Makefile.devel
Cherrypick from xsym 2003-03-01 11:33:36 UTC D. A. <d.a@example.com> 'Version 4.5 (beta?) sent by CW, as a package distrib.':
    x-symbol/etc/RIP.xbm
    x-symbol/etc/colormap138.xpm
    x-symbol/etc/drawing.xbm
    x-symbol/etc/escherknot.xbm
    x-symbol/etc/fonts/2helvR12.bdf
    x-symbol/etc/fonts/2helvR14.bdf
    x-symbol/etc/fonts/3helvR12.bdf
    x-symbol/etc/fonts/3helvR14.bdf
    x-symbol/etc/fonts/5etl14.bdf
    x-symbol/etc/fonts/5etl16.bdf
    x-symbol/etc/fonts/makesub
    x-symbol/etc/fonts/nilxs.bdf
    x-symbol/etc/fonts/xsymb0_12.bdf
    x-symbol/etc/fonts/xsymb0_14.bdf
    x-symbol/etc/fonts/xsymb1_12.bdf
    x-symbol/etc/fonts/xsymb1_14.bdf
    x-symbol/etc/genfonts/2helvR12sub.bdf
    x-symbol/etc/genfonts/2helvR12sup.bdf
    x-symbol/etc/genfonts/2helvR14sub.bdf
    x-symbol/etc/genfonts/2helvR14sup.bdf
    x-symbol/etc/genfonts/3helvR12sub.bdf
    x-symbol/etc/genfonts/3helvR12sup.bdf
    x-symbol/etc/genfonts/3helvR14sub.bdf
    x-symbol/etc/genfonts/3helvR14sup.bdf
    x-symbol/etc/genfonts/5etl14sub.bdf
    x-symbol/etc/genfonts/5etl14sup.bdf
    x-symbol/etc/genfonts/5etl16sub.bdf
    x-symbol/etc/genfonts/5etl16sup.bdf
    x-symbol/etc/genfonts/helvR12sub.bdf
    x-symbol/etc/genfonts/helvR12sup.bdf
    x-symbol/etc/genfonts/helvR14sub.bdf
    x-symbol/etc/genfonts/helvR14sup.bdf
    x-symbol/etc/genfonts/xsymb0_12sub.bdf
    x-symbol/etc/genfonts/xsymb0_12sup.bdf
    x-symbol/etc/genfonts/xsymb0_14sub.bdf
    x-symbol/etc/genfonts/xsymb0_14sup.bdf
    x-symbol/etc/genfonts/xsymb1_12sub.bdf
    x-symbol/etc/genfonts/xsymb1_12sup.bdf
    x-symbol/etc/genfonts/xsymb1_14sub.bdf
    x-symbol/etc/genfonts/xsymb1_14sup.bd

--- a/Makefile.devel
+++ b/Makefile.devel
@@ -1,7 +1,7 @@
 ## -*- makefile -*-
 ##
 ## Makefile for Proof General development.
-## 
+##
 ## Author:  David Aspinall <da@dcs.ed.ac.uk>
 ##
 ## Maintainer:  Proof General maintainer <proofgen@dcs.ed.ac.uk>
@@ -27,8 +27,7 @@
 ##			    into DISTINSTALLDIR.
 ##
 ##    make links	  - add some links which help testing web pages
-##			    from the html directory, and ensure that the
-## 
+##			    from the html directory.
 ##
 ##    make releaseclean   - clean up after 'make dist' 'make rpmrelease'.
 ##
@@ -86,6 +85,9 @@ PRERELEASE_PREFIX=3\.5pre
 PRERELEASE_TAG=3.5pre$(shell date "+%y%m%d")
 PREREL_TAG_FILE=prereltag.txt
 
+# Path to web pages in repository, used for automatically 
+# updating with release information.
+HTMLDIR=../web
 DOWNLOADHTML=develdownload.php
 DOWNLOADINFOHTML=devel.html
 
@@ -106,7 +108,6 @@ DATEMSG=$(shell if [ $(PRERELEASE_TAG) = $(VERSION) ]; then echo; else date "+ o
 # (Before 3.4, NAME was linked to the development version).
 NAME = ProofGeneral
 LATESTNAME = $(NAME)-latest
-DEVELLATESTNAME = $(NAME)-devel-latest
 
 VERSIONVARIABLE=proof-general-version
 VERSIONFILE=proof-site.el
@@ -120,7 +121,6 @@ CVS_VERSION=$(shell echo $(FULLVERSION) | sed 's/\./-/g')
 
 # Name of tar file and RPM file.
 RELEASENAME = $(NAME)-$(VERSION)
-DEVELRELEASENAME = $(NAME)-$(VERSION)-devel
 CVS_RELEASENAME = Release-$(CVS_VERSION)
 
 # Where to release (i.e. copy) a new distribution to.
@@ -130,7 +130,7 @@ RELEASEDIR = /tmp/proofgeneral-www/
 
 # How to make the release "live".  (Could be "true" to do nothing).
 # was: GOLIVE=true
-GOLIVE="scp -pr $RELEASEDIR ssh.inf.ed.ac.uk:/group/project/proofgen/web/"
+GOLIVE="scp -pr $RELEASEDIR ssh.inf.ed.ac.uk:/group/project/proofgen/web/releases/"
 
 
 CVSNAME = ProofGeneral
@@ -155,7 +155,7 @@ DEVELMAKE=make -f Makefile.devel
 # FIXME: really this should be an opt-in list!
 UNFINISHED_ELISP=generic/pg-metadata.el generic/pg-xhhtml.el generic/_pkg.el
 ETC_FILES=etc/lego etc/coq etc/demoisa etc/isa etc/isar etc/lego etc/patches etc/pgkit etc/*.txt pgkit etc/Mailman
-NONDISTFILES=.cvsignore */.cvsignore html Makefile.devel Makefile.xemacs doc/notes.txt doc/ProofGeneral.dvi doc/PG-adapting.dvi doc/ProofGeneralPortrait.eps* images/*.xcf images/notes.txt images/gimp images/Makefile $(UNFINISHED_ELISP) $(ETC_FILES)
+NONDISTFILES=.cvsignore */.cvsignore Makefile.devel Makefile.xemacs doc/notes.txt doc/ProofGeneral.dvi doc/PG-adapting.dvi doc/ProofGeneralPortrait.eps* images/*.xcf images/notes.txt images/gimp images/Makefile $(UNFINISHED_ELISP) $(ETC_FILES)
 
 # Files not to include in the ordinary distribution tarball, but left
 # in the server's copy of the distribution.
@@ -182,9 +182,6 @@ RELEASENAMEZIP = $(RELEASENAME).zip
 # What the RPM should be called.
 RELEASENAMERPM = $(RELEASENAME)-1.noarch.rpm
 
-DEVELRELEASENAMETAR = $(DEVELRELEASENAME).tar
-DEVELRELEASENAMETARGZ = $(DEVELRELEASENAMETAR).gz
-
 # Files not kept under cvs to clean away.
 # FILES_NONCVS = TAGS
 
@@ -195,7 +192,7 @@ DISTINSTALLDIR=/export/local/share/elisp
 
 # Copied from distributed Makefile
 ELISP_DIRS=generic acl2 coq demoisa hol98 isa isar lclam lego pgkit phox plastic twelf
-SUBDIRS=$(ELISP_DIRS) etc doc html images
+SUBDIRS=$(ELISP_DIRS) etc doc images
 
 PWD=$(shell pwd)
 
@@ -251,7 +248,7 @@ clean:
 	(cd doc; $(MAKE) clean)
 	(cd images; $(MAKE) clean)
 	rm -f doc/ProofGeneralPortrait.eps.gz
-	rm -f html/ProofGeneral
+	rm -f $(HTMLDIR)/ProofGeneral
 
 
 
@@ -297,7 +294,7 @@ doc:	FORCE
 
 distdocs: FORCE
 	@echo "***** MAKING DISTRIBUTION DOCS  ****"
-	(cd doc; ln -s ../html/ProofGeneralPortrait.eps.gz .; $(MAKE) dist)
+	(cd doc; ln -s $(HTMLDIR)/ProofGeneralPortrait.eps.gz .; $(MAKE) dist)
 
 ############################################################
 #
@@ -340,16 +337,16 @@ tag:
 # Edit $(DOWNLOADHTML) only for prereleases.
 # Careful: the sed command below relies on previous value of PRERELEASE_TAG.
 	if [ $(PRERELEASE_TAG) = $(VERSION) ]; then \
-	  (cd html; mv $(DOWNLOADHTML) $(DOWNLOADHTML).old; sed -e 's|ProofGeneral-$(PRERELEASE_PREFIX)......|ProofGeneral-$(PRERELEASE_TAG)|g' $(DOWNLOADHTML).old > $(DOWNLOADHTML); rm $(DOWNLOADHTML).old); \
-	  (cd html; mv $(DOWNLOADINFOHTML) $(DOWNLOADINFOHTML).old; sed -e 's|ProofGeneral-$(PRERELEASE_PREFIX)......|ProofGeneral-$(PRERELEASE_TAG)|g' $(DOWNLOADINFOHTML).old > $(DOWNLOADINFOHTML); rm $(DOWNLOADINFOHTML).old) \
+	  (cd $(HTMLDIR); mv $(DOWNLOADHTML) $(DOWNLOADHTML).old; sed -e 's|ProofGeneral-$(PRERELEASE_PREFIX)......|ProofGeneral-$(PRERELEASE_TAG)|g' $(DOWNLOADHTML).old > $(DOWNLOADHTML); rm $(DOWNLOADHTML).old); \
+	  (cd $(HTMLDIR); mv $(DOWNLOADINFOHTML) $(DOWNLOADINFOHTML).old; sed -e 's|ProofGeneral-$(PRERELEASE_PREFIX)......|ProofGeneral-$(PRERELEASE_TAG)|g' $(DOWNLOADINFOHTML).old > $(DOWNLOADINFOHTML); rm $(DOWNLOADINFOHTML).old) \
 	fi
 # This hack to SOURCE: name is only needed because we have an obsolete version
 # of rpm installed on standard machines at dcs.ed, and we have to build with
 # that version.  Otherwise we could use the %{version} macro in the spec file.
 	(cd etc; mv ProofGeneral.spec ProofGeneral.spec.old; sed -e 's/ProofGeneral-.*.tar.gz/$(RELEASENAMETARGZ)/g' ProofGeneral.spec.old > ProofGeneral.spec; rm ProofGeneral.spec.old)
 	(cd etc; mv ProofGeneral.spec ProofGeneral.spec.old; sed -e 's/ProofGeneral-.*.zip/$(RELEASENAMEZIP)/g' ProofGeneral.spec.old > ProofGeneral.spec; rm ProofGeneral.spec.old)
-	if [ -z "$(NOCVS)" ]; then cvs commit -m"Set version tag for new release." generic/$(VERSIONFILE) html/$(DOWNLOADHTML) html/$(DOWNLOADINFOHTML) etc/ProofGeneral.spec; fi
-	if [ -z "$(NOCVS)" ]; then cvs tag "$(CVS_RELEASENAME)"; fi
+	if [ -z "$(NOCVS)" ]; then cvs commit -m"Set version tag for new release." generic/$(VERSIONFILE) etc/ProofGeneral.spec; (cd $(HTMLDIR); cvs commit -m"Set version tag for new release." $(DOWNLOADHTML) $(DOWNLOADINFOHTML)); fi
+	if [ -z "$(NOCVS)" ]; then cvs tag -cF "$(CVS_RELEASENAME)"; fi
 
 ############################################################
 ##
@@ -394,10 +391,10 @@ dist:
 #	@echo " Copying doc files .."
 #	@echo "*************************************************"
 #	(cp -pr $(DISTBUILDIR)/$(RELEASENAME)/doc $(DISTBUILDIR))
-	@echo "*************************************************"
-	@echo " Moving html files .."
-	@echo "*************************************************"
-	(cd $(DISTBUILDIR)/$(RELEASENAME)/html; mv * ../..)
+#	@echo "*************************************************"
+#	@echo " Moving html files .."
+#	@echo "*************************************************"
+#	(cd $(DISTBUILDIR)/$(RELEASENAME)/html; mv * ../..)
 	@echo "*************************************************"
 	@echo " Cleaning non-distributed files .."
 	@echo "*************************************************"
@@ -420,24 +417,6 @@ dist:
 	@echo " Finished making dist."
 	@echo "*************************************************"
 
-############################################################
-##
-## develdist: make a distribution for developers from 
-##	  raw CVS sources, updating the ChangeLog.
-##	    
-develdist:
-	@echo "*************************************************"
-	@echo " Making developer distribution..."
-	@echo "*************************************************"
-	mkdir -p $(DISTBUILDIR)
-	if [ -z "$(NOCVS)" ]; then \
-           (make devel.ChangeLog; cvs commit -m"Updated." ChangeLog; cd $(DISTBUILDIR); cvs export -kv -r "$(CVS_RELEASENAME)" -d $(DEVELRELEASENAME) $(CVSNAME)) \
-	else \
-	   mkdir -p $(DISTBUILDIR)/$(DEVELRELEASENAME); \
-	   cp -pr . $(DISTBUILDIR)/$(DEVELRELEASENAME); \
-	fi
-	$(TAR) cvzf $(DISTBUILDIR)/$(DEVELRELEASENAMETARGZ) -C $(DISTBUILDIR) $(DEVELRELEASENAME)
-
 
 ############################################################
 ##
@@ -447,7 +426,7 @@ develdist:
 ##     WARNING: RELEASEDIR is not cleaned, but files there
 ##     with same names will be overwritten.
 ##
-release: distclean tag  dist develdist 
+release: distclean tag  dist 
 	@echo "*************************************************"
 	@echo " Making release (installing tarball distributions)."
 	@echo "*************************************************"
@@ -463,7 +442,6 @@ release: distclean tag  dist develdist
 	(cd $(RELEASEDIR); ln -sf $(RELEASENAMETARGZ) $(LATESTNAME).tar.gz)
 	(cd $(RELEASEDIR); ln -sf $(RELEASENAMEZIP) $(LATESTNAME).zip)
 	(cd $(RELEASEDIR); ln -sf $(RELEASENAME)-1.noarch.rpm $(LATESTNAME).noarch.rpm)
-	(cd $(RELEASEDIR); ln -sf $(DEVELRELEASENAMETARGZ) $(DEVELLATESTNAME).tar.gz)
 	(cd $(RELEASEDIR); echo $(PRERELEASE_TAG) > $(PREREL_TAG_FILE))
 	@echo "*************************************************"
 	@echo " Finished installing dist."
@@ -568,8 +546,8 @@ distinstall:
 #   Make some handy links for developers.
 #
 links:
-	ln -sf ../html/ProofGeneralPortrait.eps.gz doc
-	ln -sf ../../ProofGeneral html
+	ln -sf $(HTMLDIR)/ProofGeneralPortrait.eps.gz doc
+	ln -sf ../../ProofGeneral $(HTMLDIR)
 
 #################################################################
 ##
